@@ -1,5 +1,15 @@
 2014-04-17  Darin Adler  <darin@apple.com>
 
+        Use HashMap<unique_ptr> and Vector<unique_ptr> instead of deprecatedDeleteAllValues
+        https://bugs.webkit.org/show_bug.cgi?id=73757
+
+        Reviewed by Brent Fulgham.
+
+        * wtf/Vector.h:
+        (WTF::deprecatedDeleteAllValues): Deleted.
+
+2014-04-17  Darin Adler  <darin@apple.com>
+
         Add separate flag for IndexedDatabase in workers since the current implementation is not threadsafe
         https://bugs.webkit.org/show_bug.cgi?id=131785
         rdar://problem/16003108
